    * jabberd/lib/Makefile.am: same
    * jabberd/lib/nametab.h: same
    * jabberd/lib/utf8tab.h: same
    * jabberd/lib/lib.h: renamed lib.h to jabberdlib.h
    * jabberd/lib/jabberdlib.h: same (to make it installable)
    * jabberd/lib/snprintf.c: only define TRUE and FALSE if not defined yet
    * jabberd/Makefile.am: merging libjabberd.so and libjabberdlib.so

2004-05-20  Matthias Wimmer  <m@tthias.net>

    * ac-helpers/ac_define_dir.m4: Macro from the M4 archive
    * ac-helpers/Makefile.am: Makefile for this directory
    * ac-helpers/openssl.m4: Macro to detect openssl
    * AUTHORS: Authors as listed in README
    * bootstrap: generate configure script and Makefiles
    * ChangeLog: track changes to the jabberd14 project
    * config.rpath: system abstraction for environment vars
    * config.xml: removed, this is now auto-created
    * config.xml.dist.in: template for the configuration file
    * configure: removed, this is now auto-created
    * configure.in: template for the configure script
    * dialback/Makefile: removed, this is now auto-created
    * dialback/Makefile.am: template for the Makefile
    * dnsrv/Makefile: removed, this is now auto-created
    * dnsrv/Makefile.am: template for the Makefile
    * jabberd/base/Makefile: removed, this is now auto-created
    * jabberd/base/Makefile.am: template for the Makefile
    * jabberd/config.c: Search for configuration file in sysconfdir
    * jabberd/lib/Makefile: removed, this is now auto-created
    * jabberd/lib/Makefile.am: template for the Makefile
    * jabberd/lib/xmldef.h: removed, using installed expat
    * jabberd/lib/xmlparse.c: same
    * jabberd/lib/xmlparse.h: same
    * jabberd/lib/xmlrole.c: same
    * jabberd/lib/xmlrole.h: same
    * jabberd/lib/xmltok.c: same
    * jabberd/lib/xmltok.h: same
    * jabberd/lib/xmltok_impl.c: same
    * jabberd/lib/xmltok_impl.h: same
    * jabberd/lib/xmltok_ns.c: same
    * jabberd/Makefile: removed, this is now auto-created